// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Intakes allows you to add a new intake 1`] = `
Object {
  "payload": Object {
    "days": Object {
      "friday": true,
      "monday": true,
      "saturday": false,
      "sunday": false,
      "thursday": true,
      "tuesday": false,
      "wednesday": false,
    },
    "id": "testScheduledIntake",
    "moment": "2020-01-01T18:00:00.000Z",
  },
  "type": "SET_INTAKE_ACTION",
}
`;

exports[`Intakes allows you to add a new intake 2`] = `
Immutable.Map {
  "testScheduledIntake": Object {
    "days": Object {
      "friday": true,
      "monday": true,
      "saturday": false,
      "sunday": false,
      "thursday": true,
      "tuesday": false,
      "wednesday": false,
    },
    "id": "testScheduledIntake",
    "moment": "2020-01-01T18:00:00.000Z",
  },
}
`;

exports[`Intakes allows you to clear all existing intake 1`] = `
Object {
  "type": "CLEAR_INTAKES_ACTION",
}
`;

exports[`Intakes allows you to clear all existing intake 2`] = `Immutable.Map {}`;

exports[`Intakes allows you to delete an existing intake 1`] = `
Object {
  "payload": "testScheduledIntake",
  "type": "DELETE_INTAKE_ACTION",
}
`;

exports[`Intakes allows you to delete an existing intake 2`] = `Immutable.Map {}`;

exports[`Intakes allows you to update an existing intake 1`] = `
Object {
  "payload": Object {
    "days": Object {
      "friday": true,
      "monday": true,
      "saturday": false,
      "sunday": true,
      "thursday": true,
      "tuesday": false,
      "wednesday": false,
    },
    "id": "testScheduledIntake",
    "moment": "2020-01-01T18:00:00.000Z",
  },
  "type": "SET_INTAKE_ACTION",
}
`;

exports[`Intakes allows you to update an existing intake 2`] = `
Immutable.Map {
  "testScheduledIntake": Object {
    "days": Object {
      "friday": true,
      "monday": true,
      "saturday": false,
      "sunday": true,
      "thursday": true,
      "tuesday": false,
      "wednesday": false,
    },
    "id": "testScheduledIntake",
    "moment": "2020-01-01T18:00:00.000Z",
  },
}
`;
